# flow_doc_gener

./: .env copy  .gitignore  CLAUDE.md  README.md  dep_handbook.md  main.py  pipeline.py  pyproject.toml
core/: config.py
entity/: entry_point.py  entry_point_response.py
prompt/: call_chain_analyzer_v1.txt  entry_point_detectory_v1.txt
src/agent/: __init__.py  call_chain_analyzer.py  call_chain_analyzer_agent.py  call_chain_finisher_agent.py  entry_point_detect_agent.py  entry_point_detector.py  feature_analyzer_agent.py  generate_chart_agent.py  generate_documentation_agent.py
src/analyzer/: base_language_analyzer.py  code_dependency_analyzer.py  csharp_analyzer.py  language_analyze_provider.py
src/core/: config.py
src/entity/: __init__.py  call_chain_result_entity.py  chart_entity.py  dependency_entity.py  entry_point_entity.py  entry_point_response.py  feature_analysis_entity.py  feature_status_entity.py  func_call_entity.py  func_map_entity.py  source_code_entity.py
src/model/: __init__.py  call_chain_analysis_model.py  call_chain_model.py  call_chain_models.py  chart_model.py  dependency_model.py  entry_point_model.py  feature_analysis_model.py  feature_analysis_models.py  feature_status_model.py  file_functions_map_model.py  file_info.py  file_manager.py  file_snapshot.py  func_map_model.py  snapshot_manager.py  source_code_manager.py  source_code_model.py
src/service/: __init__.py  analysis_service.py  call_chain_analyzer_service.py  chart_service.py  dependency_service.py  entry_point_extractor.py  func_map_service.py  (+4 more)
utils/: crawl_local_files.py
(+9 files in other folders)
