[project]
name = "flow-doc-gener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
  "python-dotenv>=1.1.1",
  "autogen-agentchat>=0.7.2",
  "autogen-ext[azure,openai]>=0.7.2",
  "pydantic>=2.11.7",
  "pathspec>=0.12.1",
  "tree-sitter>=0.25.1",
  "tree-sitter-language-pack>=0.9.0",
]
